--- a/app/src/main/res/layout/frag_auto_namelist.xml
+++ b/app/src/main/res/layout/frag_auto_namelist.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ffffff"
     android:orientation="vertical">
 
 
@@ -20,8 +21,8 @@
                 android:id="@+id/frag_AutoName_RadioGroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:visibility="gone">
 
                 <RadioButton
                     android:id="@+id/frag_AutoName_ownerCommittee"
@@ -30,9 +31,9 @@
                     android:layout_weight="1"
                     android:background="@drawable/frag_picdetail_checktextview_selector"
                     android:button="@null"
+
                     android:clickable="true"
                     android:gravity="center"
-                    android:checked="true"
                     android:text="业委会"
                     android:textColor="@color/color_group_selector" />
 
@@ -44,7 +45,7 @@
                     android:layout_weight="1"
                     android:background="@drawable/frag_picdetail_checktextview_selector"
                     android:button="@null"
-                    android:checked="false"
+
                     android:clickable="true"
                     android:gravity="center"
                     android:text="业主代表"
@@ -57,23 +58,23 @@
                     android:layout_weight="1"
                     android:background="@drawable/frag_picdetail_checktextview_selector"
                     android:button="@null"
-                    android:checked="false"
+
                     android:clickable="true"
                     android:gravity="center"
                     android:text="业主"
-                    android:visibility="gone"
-                    android:textColor="@color/color_group_selector" />
+                    android:textColor="@color/color_group_selector"
+                    android:visibility="gone" />
             </RadioGroup>
         </LinearLayout>
+
 
         <RelativeLayout
             android:id="@+id/frag_AutoName_fragContainer"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:visibility="invisible"
             android:background="#ffffff"
-          >
+            android:visibility="invisible">
 
             <TextView
                 android:id="@+id/tv_Autonotice_Nodata"
@@ -103,6 +104,38 @@
                 android:layout_height="match_parent"
                 android:divider="@null"
                 android:visibility="gone"></ListView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <cn.hi028.android.highcommunity.view.SearchView
+                    android:id="@+id/search_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/gray">
+
+                </cn.hi028.android.highcommunity.view.SearchView>
+
+                <ListView
+                    android:id="@+id/lv_search_results"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone">
+
+                </ListView>
+            </LinearLayout>
+            <TextView
+                android:id="@+id/tv_create"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_marginRight="12dp"
+                android:layout_marginTop="20dp"
+                android:layout_alignParentRight="true"
+                android:background="@drawable/bg_autonamelist_search"
+                android:clickable="true"
+              />
         </RelativeLayout>
     </LinearLayout>
 
