--- a/app/src/main/res/layout/frag_auto_superviselist.xml
+++ b/app/src/main/res/layout/frag_auto_superviselist.xml
@@ -88,7 +88,7 @@
             android:layout_height="wrap_content"
             android:layout_alignBottom="@id/positionview"
             android:layout_alignParentRight="true"
-
+android:visibility="invisible"
             android:layout_marginBottom="20dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/img_groupmessage_selector" />
