--- a/app/src/main/res/layout/frag_login.xml
+++ b/app/src/main/res/layout/frag_login.xml
@@ -116,6 +116,7 @@ android:drawableRight="@mipmap/img_delete"
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:layout_weight="1" />
 
             <TextView
@@ -123,6 +124,7 @@ android:drawableRight="@mipmap/img_delete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="游客模式"
+                android:visibility="gone"
                 android:textColor="@color/Defult_Color_AppGreen"
                 android:textSize="@dimen/font_extra_small_half" />
 
