--- a/app/src/main/res/layout/pay_result.xml
+++ b/app/src/main/res/layout/pay_result.xml
@@ -13,6 +13,7 @@
         android:layout_gravity="center"
         android:background="@color/Defult_Color_ShallowGrey"
         android:gravity="center"
+
         android:orientation="vertical">
 
         <TextView
@@ -20,6 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:text="---"
             android:layout_gravity="center_horizontal"
             android:textColor="@color/Defult_Color_MidGrey"
             android:textSize="16dp" />
@@ -29,8 +31,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="60dp"
-            android:background="@color/Defult_Color_AppGreen"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/bg_autofrag_selector_vote"
             android:clickable="true"
             android:gravity="center"
             android:paddingBottom="8dp"
