--- a/app/src/main/res/drawable/bg_voteresult_shape.xml
+++ b/app/src/main/res/drawable/bg_voteresult_shape.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-	<corners android:radius="2dp"/>
-	<stroke android:width="0.5dp" android:color="@color/gray"/>
-	<solid android:color="@color/white"/>
+	<corners android:radius="1dp"/>
+	<stroke android:width="0dp" android:color="@color/gray"/>
+	<solid android:color="@color/Defult_Color_ShallowGrey"/>
 	<padding android:top="3dp" android:bottom="3dp" android:left="5dp"/>
 </shape>
