--- a/app/src/main/res/layout/frag_auto_detail_questions.xml
+++ b/app/src/main/res/layout/frag_auto_detail_questions.xml
@@ -24,7 +24,7 @@
             android:id="@+id/txt_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="10dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="20dp"
@@ -37,6 +37,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
+            android:visibility="visible"
             android:background="@color/Defult_Color_LineGrey" />
 
         <LinearLayout
