--- a/app/src/main/res/layout/frag_auto_detail_questions_question_layout.xml
+++ b/app/src/main/res/layout/frag_auto_detail_questions_question_layout.xml
@@ -2,10 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/bg_voteresult"
     android:orientation="vertical"
-    android:paddingTop="25dp"
-
-    >
+    android:paddingBottom="15dp"
+    android:layout_marginLeft="12dp"
+   android:layout_marginRight="12dp"
+    android:paddingTop="15dp">
 
     <TextView
         android:id="@+id/txt_question_item"
@@ -23,6 +25,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="@dimen/ui_10_dip"
         android:background="#33aaaaaa"
         android:orientation="vertical">
 
@@ -32,6 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:layout_marginTop="25dp"
-        android:background="@color/Defult_Color_LineGrey"/>
+        android:background="@color/Defult_Color_LineGrey"
+        android:visibility="gone" />
 
 </LinearLayout>
